# rust-binary-template

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/: CONTRIBUTING.md
.github/chglog/: release.yml
.github/workflows/: CI.yml  dist.yml  docker.yml  release.yml  validate.yml
mybin/: Cargo.toml  Dockerfile
