[package]
name = "mybin"
description = "A sample binary app"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/txpipe/mybin"
homepage = "https://github.com/txpipe/mybin"
documentation = "https://docs.rs/mybin"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]


[dependencies]
